# RGraph

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  build-all.sh  compile_commands.json  main.cpp  temp.txt
.cache/clangd/index/: Color.cpp.B6617C183B1FBAF8.idx  Color.h.106AF8183467B42C.idx  DirMan.h.04B7675923E136C7.idx  Drawer.cpp.13E585E2B49089ED.idx  Drawer.h.5D215550D1426458.idx  File.cpp.81A305AE90B5A2B3.idx  File.h.38ED6F43B7EC7724.idx  Font.cpp.528CE86AD48625CC.idx  Font.h.3AAB6DC207DB1831.idx  Global_Def.h.93279CD9EDE76A34.idx  Image.cpp.86A86C454825EF0B.idx  Image.h.E2455696BE2E42DE.idx  Keyboard.cpp.7436E1440341823A.idx  Keyboard.h.72CD2DE205E932C6.idx  Quad.cpp.735FAAD6D12641D9.idx  Quad.h.EC7B62575F904C71.idx  QuadBatcher.cpp.31C7B53B83A83F65.idx  QuadBatcher.h.0EA374FC69098289.idx  QuadDrawer.cpp.9BBA3CCD35A3B8A6.idx  QuadDrawer.h.5E75149850A6C468.idx  RGraph.cpp.EB9486627EC0F831.idx  RGraph.h.701E97C82C408A99.idx  Ref_Base.h.AC803237BBAC581D.idx  RenderSurface.cpp.7D2F17A7E7D33ACB.idx  RenderSurface.h.FF4E18D375023B7A.idx  Shader.cpp.94D5A2C9ECAD83C4.idx  Shader.h.38514121426B03CE.idx  Signal.h.2A188A7A85A7B6C2.idx  Sprite.cpp.6F997CBD565AFE6C.idx  Sprite.h.47555259A914322A.idx  SpriteDrawer.cpp.A7E17597C6E6FE7E.idx  SpriteDrawer.h.9E0831D700AF5591.idx  Texture.cpp.EDF8E33853144DA8.idx  Texture.h.3E20BC55CECF357F.idx  Window.cpp.34A1500060DC6D2A.idx  Window.h.F5BA0D8FDEB3553F.idx  _fixes.hpp.F3DC463DC535BD7F.idx  _vectorize.hpp.8A7A059C42C22D09.idx  afangles.c.5D41FA6D914751C0.idx  afblue.c.31EEFB30624299EB.idx  (+592 more)
include/: DirMan.h  File.h  RGraph.h  Texture.h  cleanup.h  r_util.h  vec2.h
include/RG/: Color.h  DirMan.h  Drawer.h  File.h  Font.h  Global_Def.h  Image.h  Keyboard.h  Quad.h  QuadBatcher.h  QuadDrawer.h  RGraph.h  Ref_Base.h  RenderSurface.h  Rfont.h  Shader.h  Signal.h  Sprite.h  SpriteBatcher.h  SpriteDrawer.h  Text.h  Texture.h  Window.h  cleanup.h  r_util.h
res/: default.vs  key.txt
shaders/: quad.fs  quad.vs
source/: Color.cpp  DirMan.cpp  Drawer.cpp  File.cpp  Font.cpp  Image.cpp  Keyboard.cpp  Quad.cpp  QuadBatcher.cpp  QuadDrawer.cpp  RGraph.cpp  RenderSurface.cpp  Shader.cpp  Sprite.cpp  SpriteBatcher.cpp  SpriteDrawer.cpp  Text.cpp  Texture.cpp  Window.cpp  glad.c  vec2.cpp
test/: .gitignore  CMakeLists.txt  updateRG.sh
test/FsTest/: main.cpp
tests/: CMakeLists.txt
tests/Rfonts/: CMakeLists.txt  test.cpp
tests/Rfonts/shaders/: s1.vs
tests/fbufferTest/: CMakeLists.txt  fbTest.cpp
